Set version to 1.0.0 and display in UI

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     }
   },
   "keywords": [],
-  "author": "",
+  "author": "Nitesh",
   "license": "ISC",
   "description": "INDM - Internet Download Manager",
   "devDependencies": {
